[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Frosty progress bar resource.tres" type="StyleBox" id=1]
[ext_resource path="res://src/Scripts/Frozen bar.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="FrozenBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -424.0
margin_bottom = -300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_right = 341.0
margin_bottom = 32.0
custom_styles/fg = ExtResource( 1 )
custom_styles/bg = SubResource( 1 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 144.0
margin_top = 8.0
margin_right = 203.0
margin_bottom = 22.0
text = "Warmth"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FillUpTimer" type="Timer" parent="."]

[node name="DecayTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="FillUpTimer" to="." method="_on_FillUpTimer_timeout"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_DecayTimer_timeout"]
